# Portfolio-Website

./: .env  .eslintrc  .gitignore  Procfile  README.rst  manage.py  package.json  pyproject.toml  requirements.txt
app/: __init__.py  blueprints.py  config.py  extension.py  mail.py  util.py
app/index/: contact_form.py  form.py  homepage.py
app/index/templates/: home.html  thanks.html
app/templates/: 404.html  500.html  footer.html  layout.html  nav.html
assets/css/: style.css
portfolio/: settings.py
portfolio/portfolio/: settings.py
requirements/: development.txt  production.txt
