[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
django = "^3.0.8"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
