[tool.poetry]
name = "portfolio-website"
version = "0.1.0"
description = "My personal portfolio website"
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "BSD-4-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.5"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
email-validator = "^1.1.1"
wtforms = "^2.3.3"
gunicorn = "^20.0.4"
supervisor = "^4.2.0"
gevent = "^20.6.2"
flask-static-digest = "^0.1.3"
flask-login = "^0.5.0"
flask-bcrypt = "^0.7.1"
flask-caching = "^1.9.0"
flask-debugtoolbar = "^0.11.0"
environs = "^8.0.0"
flask-mail = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"
hypothesis = "^5.25.0"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
sphinx = "^3.2.1"
tox = "^3.19.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
